@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2011-08-02 (SVN):
+    * gl_vidnt.c, gl_vidsdl.c: Changed VID_SetPalette() to not use the
+      FS_LoadBufFile() method.
+
+2011-08-02 (SVN):
     * Bumped beta version date to 2011-08-02.
 
 2011-08-02 (SVN):
